# YZTA-bootcamp-Team-44

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  github_ci_job_detail.py  pyproject.toml  railway.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py  observability.py  redis_client.py
apps/api/scripts/: seed_database.py
apps/api/tests/: conftest.py  test_agent.py  test_agent_foundation.py  test_agent_models.py  test_agent_routes.py  test_agents.py  test_analysis_route.py  test_api.py  test_applications.py  test_auth.py  test_context_manager.py  test_cover_letter_agent.py  test_cover_letter_route.py  test_cover_letter_schema.py  test_cv_generation_agent.py  test_cv_generation_route.py  test_cv_route.py  test_documents.py  test_e2e.py  test_experiences_route.py  test_gemini_client.py  test_listing_reanalyze_rematch.py  test_match_route.py  test_matching_agent.py  test_observability.py  test_orchestrator.py  test_projects_route.py
apps/compiler/: Dockerfile  requirements.txt
apps/compiler/app/: main.py  runner.py
apps/compiler/docs/: TECTONIC_EVALUATION.md
apps/compiler/fixtures/: benchmark.tex  invalid.tex  sample.tex
apps/compiler/scripts/: smoke-test.sh  (+1 more)
apps/web/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
docs/: DEPLOY_STAGING.md  Sprint-2-Yapilanlar-ve-Eksikler.md  deploy.md
docs/sprints/: us-047-uat-report.md
test-ui/: index.html
(+178 files in other folders)
